--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -1,6 +1,7 @@
 {
     "app.home": "Home",
     "app.login.email": "Email address:",
+    "app.login.email.hint": "test@example.com",
     "app.login.headline": "Login",
     "app.login.password": "Password",
     "app.login.login_cta": "Login",
