--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -1,11 +1,16 @@
 {
     "app.home": "Home",
     "app.login.email": "Email address:",
+    "app.login.name": "Name:",
+    "app.login.name.hint": "Kim Human",
     "app.login.email.hint": "test@example.com",
     "app.login.headline": "Login",
     "app.login.password": "Password",
     "app.login.login_cta": "Login",
-    "app.login.error.message": "An error occurred during login. Try again.",
+    "app.login.signup_cta": "Sign up",
+    "app.login.error.general": "An error occurred during login. Try again.",
+    "app.login.error.badCredentials": "Bad credentials. Please correct your input or sign up.",
+    "app.login.error.EMAIL_IN_USE": "This email is already in use.",
     "topics.add.dialog.title": "Add new topic",
     "topics.add.dialog.input.label": "Please enter a title for your discussion",
     "topics.add.dialog.input.hint": "Discuss standardisation of image labeling (xkcd.com/927)",
