--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -17,5 +17,7 @@
     "topics.add.dialog.submit": "Submit",
     "topics.add.dialog.cancel": "Cancel",
     "topic.join.expert": "I can share some knowledge",
-    "topic.join.newbie": "I like to learn about this"
+    "topic.join.newbie": "I like to learn about this",
+    "topic.label.expert": "Experts",
+    "topic.label.newbie": "Newbies"
 }
