--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -14,8 +14,8 @@
     "topics.filter.all": "All Topics",
     "topics.filter.my": "My Topics",
     "topics.add.dialog.title": "Add new topic",
-    "topics.add.dialog.input.label": "Please enter a title for your discussion",
-    "topics.add.dialog.input.hint": "Discuss standardisation of image labeling (xkcd.com/927)",
+    "topics.add.dialog.input.label": "Dicussion Title",
+    "topics.add.dialog.input.hint": "Standardisation of labeling (xkcd.com/927)",
     "topics.add.dialog.submit": "Submit",
     "topics.add.dialog.cancel": "Cancel",
     "topic.join.expert": "I can share some knowledge",
