--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -15,17 +15,25 @@
     "topics.filter.all": "All Topics",
     "topics.filter.my": "My Topics",
     "topics.add.dialog.title": "Add new topic",
-    "topics.add.dialog.input.label": "Dicussion Title",
-    "topics.add.dialog.input.hint": "Standardisation of labeling (xkcd.com/927)",
+    "topics.add.dialog.titleInput.label": "Dicussion Title",
+    "topics.add.dialog.titleInput.hint": "Standardisation of labeling",
+    "topics.add.dialog.descriptionInput.label": "Description",
+    "topics.add.dialog.descriptionInput.hint": "xkcd.com/927",
     "topics.add.dialog.submit": "Submit",
     "topics.add.dialog.cancel": "Cancel",
     "topic.join.expert": "I can share some knowledge",
     "topic.join.newbie": "I like to learn about this",
     "topic.leave.expert": "Leave",
     "topic.leave.newbie": "Leave",
-    "topic.label.expert": "Experts",
-    "topic.label.newbie": "Newbies",
-    "topic.schedule.dialog.title": "Schedule Topic",
-    "topic.schedule.dialog.submit": "Submit",
-    "topic.schedule.dialog.cancel": "Cancel"
+    "topic.label.location": "Location",
+    "topic.label.begin": "Begin",
+    "topic.label.expert": "Nerds",
+    "topic.label.newbie": "Greenhorns",
+    "topic.edit.dialog.title": "Schedule Topic",
+    "topic.edit.dialog.submit": "Submit",
+    "topic.edit.dialog.cancel": "Cancel",
+    "topic.delete.dialog.title": "Delete Topic",
+    "topic.delete.dialog.text": "Are you sure you want to delete the topic \"{title}\"?",
+    "topic.delete.dialog.confirm": "Confirm",
+    "topic.delete.dialog.cancel": "Cancel"
 }
