add concept of talks

--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -23,8 +23,9 @@
     "topics.add.dialog.cancel": "Cancel",
     "topic.join.expert": "I can share some knowledge",
     "topic.join.newbie": "I like to learn about this",
-    "topic.leave.expert": "Leave",
-    "topic.leave.newbie": "Leave",
+    "topic.join.talk": "Sign me up!",
+    "topic.leave.expert": "Not interested anymore...",
+    "topic.leave.newbie": "Not interested anymore...",
     "topic.label.location": "Location",
     "topic.label.begin": "Begin",
     "topic.label.expert": "Nerds",
