filter past topics

--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -12,8 +12,9 @@
     "app.login.error.badCredentials": "Bad credentials. Please correct your input or sign up.",
     "app.login.error.EMAIL_IN_USE": "This email is already in use.",
     "topics.headline": "Topics",
-    "topics.filter.all": "All Topics",
-    "topics.filter.my": "My Topics",
+    "topics.filter.all": "All Upcoming",
+    "topics.filter.my": "My Upcoming",
+    "topics.filter.past": "Past Topics",
     "topics.add.dialog.title": "Add new topic",
     "topics.add.dialog.titleInput.label": "Dicussion Title",
     "topics.add.dialog.titleInput.hint": "Standardisation of labeling",
