--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -2,6 +2,7 @@
     "app.menu.signOut": "Sign out",
     "app.login.email": "Email address:",
     "app.login.name": "Name:",
+    "app.login.team": "Team:",
     "app.login.name.hint": "Kim Human",
     "app.login.email.hint": "test@example.com",
     "app.login.headline": "Login",
@@ -33,6 +34,7 @@
     "topic.label.expert": "Nerds",
     "topic.label.newbie": "Greenhorns",
     "topic.edit.dialog.title": "Schedule Topic",
+    "topic.edit.dialog.isTalk": "Is Talk?",
     "topic.edit.dialog.submit": "Submit",
     "topic.edit.dialog.cancel": "Cancel",
     "topic.delete.dialog.title": "Delete Topic",
