--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -1,13 +1,21 @@
 {
     "app.menu.signOut": "Sign out",
+    "app.login.headline": "Login",
     "app.login.email": "Email address:",
     "app.login.name": "Name:",
     "app.login.team": "Team:",
     "app.login.name.hint": "Kim Human",
     "app.login.email.hint": "test@example.com",
-    "app.login.headline": "Login",
     "app.login.password": "Password",
-    "app.login.login_cta": "Login",
+    "app.login.cta": "Login",
+    "app.signup.headline": "Sign Up",
+    "app.signup.email": "Email address:",
+    "app.signup.name": "Name:",
+    "app.signup.team": "Team:",
+    "app.signup.name.hint": "Kim Human",
+    "app.signup.email.hint": "test@example.com",
+    "app.signup.password": "Password",
+    "app.signup.cta": "Sign Up",
     "app.login.signup_cta": "Sign up",
     "app.login.error.general": "An error occurred during login. Try again.",
     "app.login.error.badCredentials": "Bad credentials. Please correct your input or sign up.",
