fix login errors

--- a/client/src/i18n/en-US.json
+++ b/client/src/i18n/en-US.json
@@ -17,10 +17,13 @@
     "app.signup.password": "Password",
     "app.signup.cta": "Sign Up",
     "app.login.signup_cta": "Sign up",
+    "app.login.error.missingFields": "Please fill in all required form fields.",
     "app.login.error.general": "An error occurred during login. Try again.",
     "app.login.error.badCredentials": "Bad credentials. Please correct your input or sign up.",
     "app.login.error.Invalid credentials!": "Bad credentials. Please correct your input or sign up.",
-    "app.login.error.EMAIL_IN_USE": "This email is already in use.",
+    "app.signup.error.missingFields": "Please fill in all required form fields.",
+    "app.signup.error.general": "An error occurred during login. Try again.",
+    "app.signup.error.EMAIL_IN_USE": "This email is already in use.",
     "topics.headline": "Topics",
     "topics.filter.all": "All Upcoming",
     "topics.filter.my": "My Upcoming",
